# object-pool

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-and-test.yml
include/: CObjectPool.hpp
tests/: ObjectPool.cpp
